Politica de privacidade criado

--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -1,73 +1,202 @@
-Política de Privacidade — Vidraçaria KIBOX
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Privacidade — Vidraçaria KIBOX</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        .privacy-container {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+            font-family: 'Montserrat', Arial, sans-serif;
+            line-height: 1.8;
+            color: #333;
+        }
 
-Última atualização: 15 de outubro de 2025
-Responsável: Vidraçaria KIBOX – Ribeirão Preto/SP
-Contato: +55 (16) 99619-7527
+        .privacy-header {
+            text-align: center;
+            margin-bottom: 40px;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 20px;
+        }
 
-1. Introdução
+        .privacy-header h1 {
+            font-size: 32px;
+            color: #007bff;
+            margin-bottom: 10px;
+        }
 
-A Vidraçaria KIBOX valoriza a privacidade e a segurança das informações de todos os clientes, sejam pessoas físicas ou jurídicas. Este documento explica como coletamos, utilizamos e protegemos os dados fornecidos durante o contato e a realização dos serviços.
+        .privacy-header p {
+            color: #666;
+            font-size: 14px;
+        }
 
-2. Coleta de informações
+        .privacy-section {
+            margin-bottom: 30px;
+        }
 
-Coletamos apenas as informações necessárias para o atendimento e execução dos serviços, como:
+        .privacy-section h2 {
+            font-size: 20px;
+            color: #007bff;
+            margin-bottom: 15px;
+            margin-top: 25px;
+        }
 
-Nome completo
+        .privacy-section h3 {
+            font-size: 16px;
+            color: #333;
+            margin: 15px 0 10px 0;
+            font-weight: 600;
+        }
 
-Endereço de instalação
+        .privacy-section p {
+            margin-bottom: 15px;
+            text-align: justify;
+        }
 
-Telefone e WhatsApp
+        .privacy-section ul {
+            margin-left: 20px;
+            margin-bottom: 15px;
+        }
 
-Informações do projeto (tipo de vidro, medidas, acabamentos etc.)
+        .privacy-section li {
+            margin-bottom: 10px;
+        }
 
-Dados de pagamento quando aplicável
+        .privacy-footer {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ddd;
+            text-align: center;
+            color: #666;
+            font-size: 12px;
+        }
 
-Esses dados são fornecidos voluntariamente pelo cliente durante o atendimento, seja por WhatsApp, telefone ou formulário de orçamento.
+        .contact-info {
+            background-color: #f5f5f5;
+            padding: 15px;
+            border-radius: 5px;
+            margin: 15px 0;
+        }
 
-3. Uso das informações
+        .contact-info p {
+            margin: 5px 0;
+        }
 
-As informações coletadas são utilizadas exclusivamente para:
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
 
-Elaborar orçamentos;
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="privacy-container">
+        <div class="privacy-header">
+            <h1>Política de Privacidade</h1>
+            <p>Vidraçaria KIBOX | Última atualização: 15 de outubro de 2025</p>
+        </div>
 
-Entrar em contato com o cliente;
+        <div class="privacy-section">
+            <h2>1. Introdução</h2>
+            <p>
+                A Vidraçaria KIBOX valoriza a privacidade e a segurança das informações de todos os clientes, 
+                sejam pessoas físicas ou jurídicas. Este documento explica como coletamos, utilizamos e protegemos 
+                os dados fornecidos durante o contato e a realização dos serviços.
+            </p>
+        </div>
 
-Agendar visitas e montagens;
+        <div class="privacy-section">
+            <h2>2. Coleta de Informações</h2>
+            <p>Coletamos apenas as informações necessárias para o atendimento e execução dos serviços:</p>
+            <ul>
+                <li>Nome completo</li>
+                <li>Endereço de instalação</li>
+                <li>Telefone e WhatsApp</li>
+                <li>Informações do projeto (tipo de vidro, medidas, acessórios, etc.)</li>
+            </ul>
+            <p>
+                Esses dados são fornecidos voluntariamente pelo cliente durante o atendimento, seja por WhatsApp, 
+                telefone ou formulário de orçamento.
+            </p>
+        </div>
 
-Emitir comprovantes e notas fiscais;
+        <div class="privacy-section">
+            <h2>3. Uso das Informações</h2>
+            <p>As informações coletadas são utilizadas exclusivamente para:</p>
+            <ul>
+                <li>Elaborar orçamentos</li>
+                <li>Entrar em contato com o cliente</li>
+                <li>Agendar visitas e montagens</li>
+                <li>Emitir comprovantes e notas fiscais</li>
+                <li>Garantir a qualidade e execução correta dos serviços contratados</li>
+            </ul>
+            <p>
+                Nenhuma informação é compartilhada com terceiros, exceto quando necessário para aquisição de 
+                materiais em distribuidoras parceiras (como vidros, perfis e acessórios), e mesmo nesses casos, 
+                apenas os dados estritamente necessários são utilizados.
+            </p>
+        </div>
 
-Garantir a qualidade e execução correta dos serviços contratados.
+        <div class="privacy-section">
+            <h2>4. Armazenamento e Proteção dos Dados</h2>
+            <p>
+                Todos os dados dos clientes são armazenados de forma segura em planilhas internas e ferramentas 
+                de uso restrito, como Microsoft Office e Notion, acessadas apenas pelo responsável direto da empresa. 
+                Não utilizamos sistemas automáticos de coleta de dados ou cookies.
+            </p>
+        </div>
 
-Nenhuma informação é compartilhada com terceiros, exceto quando necessário para aquisição de materiais em distribuidoras parceiras (como vidros, perfis e acessórios), e mesmo nesses casos, apenas os dados estritamente necessários são utilizados.
+        <div class="privacy-section">
+            <h2>5. Direitos do Titular dos Dados</h2>
+            <p>O cliente pode, a qualquer momento, solicitar:</p>
+            <ul>
+                <li>A exclusão completa de seus dados</li>
+                <li>A correção de informações</li>
+                <li>O acesso às informações armazenadas</li>
+            </ul>
+            <p>
+                Essas solicitações podem ser feitas diretamente pelo número oficial da empresa: 
+                <strong>(16) 99619-7527</strong>
+            </p>
+        </div>
 
-4. Armazenamento e proteção dos dados
+        <div class="privacy-section">
+            <h2>6. Responsabilidade</h2>
+            <p>
+                A Vidraçaria KIBOX é totalmente responsável pela qualidade e segurança dos dados fornecidos. 
+                Em caso de qualquer problema relacionado à privacidade, o cliente deve entrar em contato 
+                diretamente conosco para análise e solução.
+            </p>
+        </div>
 
-Todos os dados dos clientes são armazenados de forma segura em planilhas internas e ferramentas de uso restrito, como Microsoft Office e Notion, acessadas apenas pelo responsável direto da empresa.
-Não utilizamos sistemas automáticos de coleta de dados ou cookies.
+        <div class="privacy-section">
+            <h2>7. Alterações nesta Política</h2>
+            <p>
+                Podemos atualizar esta política de tempos em tempos para refletir melhorias nos processos internos 
+                ou adequações à legislação vigente. A data de atualização sempre estará visível no início deste 
+                documento.
+            </p>
+        </div>
 
-5. Direitos do titular dos dados
+        <div class="privacy-section">
+            <h2>8. Contato</h2>
+            <p>Para dúvidas sobre esta Política de Privacidade ou sobre o uso de dados pessoais, entre em contato:</p>
+            <div class="contact-info">
+                <p><strong>Vidraçaria KIBOX</strong></p>
+                <p>📱 Telefone: <a href="tel:+5516996197527">+55 (16) 99619-7527</a></p>
+                <p>📍 Local: Centro — Ribeirão Preto/SP</p>
+            </div>
+        </div>
 
-O cliente pode, a qualquer momento, solicitar:
-
-A exclusão completa de seus dados;
-
-A correção de informações;
-
-O acesso às informações armazenadas.
-
-Essas solicitações podem ser feitas diretamente pelo número oficial da empresa: (16) 99619-7527.
-
-6. Responsabilidade
-
-A Vidraçaria KIBOX é totalmente responsável pela qualidade, entrega e montagem de todos os produtos e serviços prestados.
-Em caso de qualquer problema com o serviço realizado, o cliente deve entrar em contato diretamente conosco para análise e solução.
-
-7. Alterações nesta política
-
-Podemos atualizar esta política de tempos em tempos para refletir melhorias nos processos internos ou adequações à legislação vigente. A data de atualização sempre estará visível no início deste documento.
-
-8. Contato
-
-Para dúvidas sobre esta Política de Privacidade ou sobre o uso de dados pessoais, entre em contato diretamente:
-📞 +55 (16) 99619-7527
-📍 Centro — Ribeirão Preto/SP
+        <div class="privacy-footer">
+            <p>© 2025 Vidraçaria KIBOX | Todos os direitos reservados</p>
+        </div>
+    </div>
+</body>
+</html>
