--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
-    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; 
-    connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; 
-    img-src 'self' data: https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; 
-    style-src 'self' 'unsafe-inline'; 
-    font-src 'self' data:;">
+    default-src 'self';
+    script-src 'self' 'unsafe-inline' 'unsafe-eval'
+        https://www.googletagmanager.com
+        https://www.googleadservices.com
+        https://*.google-analytics.com
+        https://*.google.com
+        https://*.google.com.br
+        https://*.doubleclick.net;
+    connect-src 'self'
+        https://www.googletagmanager.com
+        https://www.googleadservices.com
+        https://googleads.g.doubleclick.net
+        https://*.google-analytics.com
+        https://*.google.com
+        https://*.doubleclick.net;
+    img-src 'self' data:
+        https://www.googletagmanager.com
+        https://www.googleadservices.com
+        https://googleads.g.doubleclick.net
+        https://*.google-analytics.com
+        https://*.google.com
+        https://*.google.com.br
+        https://*.doubleclick.net;
+    style-src 'self' 'unsafe-inline';
+    font-src 'self' data:;
+    worker-src 'self';
+">
+
 
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
 
