--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
-default-src 'self';
-script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://stats.g.doubleclick.net https://www.google.com https://tagassistant.google.com;
-connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://www.google-analytics.com https://stats.g.doubleclick.net https://www.google.com;
-img-src 'self' data: https://www.googleadservices.com https://www.google-analytics.com https://stats.g.doubleclick.net https://www.google.com;
-style-src 'self' 'unsafe-inline';
-font-src 'self' data:;">
+    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://stats.g.doubleclick.net https://googleads.g.doubleclick.net https://*.google-analytics.com https://*.google.com https://*.doubleclick.net;
+    connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://stats.g.doubleclick.net https://googleads.g.doubleclick.net https://*.google-analytics.com https://*.google.com https://*.doubleclick.net;
+    img-src 'self' data: blob: https://www.googletagmanager.com https://googleads.g.doubleclick.net https://stats.g.doubleclick.net https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net;
+    style-src 'self' 'unsafe-inline';
+    font-src 'self' data:;
+">
 
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
 
