Add google.com to connect-src and img-src v5 teste
Added 'https://www.google.com' to connect-src and img-src for testing purposes.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         https://www.googletagmanager.com
         https://www.googleadservices.com
         https://googleads.g.doubleclick.net
+        https://www.google.com           <!-- adcionado como teste -->
         https://*.google-analytics.com
         https://*.google.com
         https://*.doubleclick.net;
@@ -23,6 +24,7 @@
         https://www.googletagmanager.com
         https://www.googleadservices.com
         https://googleads.g.doubleclick.net
+        https://www.google.com           <!-- adcionado como teste -->
         https://*.google-analytics.com
         https://*.google.com
         https://*.google.com.br
