Update content security policy in index.html v5
Added new sources for script and image loading.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         https://www.google.com           <!-- adcionado como teste -->
         https://*.google-analytics.com
         https://*.google.com
-        https://*.doubleclick.net;
+        https://*.doubleclick.net
+        https://www.google.com/pagead/*; <!-- adcionado como teste -->
     img-src 'self' data:
         https://www.googletagmanager.com
         https://www.googleadservices.com
