--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="
-    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; 
-    connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; 
-    img-src 'self' data: https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; 
-    style-src 'self' 'unsafe-inline'; 
-    font-src 'self' data:;">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; connect-src 'self' https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; img-src 'self' data: https://www.googletagmanager.com https://www.googleadservices.com https://*.google-analytics.com https://*.google.com https://*.doubleclick.net; style-src 'self' 'unsafe-inline'; font-src 'self' data:;">
 
     <title>Vidraçaria Kibox - Especialista em Vidro Temperado | Ribeirão Preto</title>
 
@@ -16,6 +11,7 @@
     <link rel="preload" href="/fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <noscript><link rel="stylesheet" href="/styles.css?v=2.7"></noscript>
 
     
@@ -253,7 +249,7 @@
                 <img src="/Imagens/icons8-whatsapp-48.webp" 
                 alt="Ícone WhatsApp"
                 width=48 
-                height="48"   
+                height="48"> <!-- Ícone otimizado -->   
                 <strong>Peça seu Orçamento</strong>
             </a>
         </section>
@@ -328,7 +324,7 @@
     
     <script src="script.js?v=2.7" defer></script>
 
-<script>
+<!--<script>
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('sw.js')
     .then(function(registration) {
@@ -338,6 +334,6 @@ if ('serviceWorker' in navigator) {
       console.log('❌ Falha no Service Worker:', error);
     });
 }
-</script>
+</script> -->
 </body>
 </html>
