--- a/index.html
+++ b/index.html
@@ -137,24 +137,134 @@
     <!-- Schema.org INVISÍVEL -->
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
-      "@type": "HomeAndConstructionBusiness",
-      "name": "Vidraçaria Kibox",
-      "description": "Vidraçaria especializada em vidro temperado com 22 anos de experiência em Ribeirão Preto",
-      "url": "https://vidracariakibox.github.io",
-      "telephone": "+55-16-99619-7527",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Rua Campos Novos, Nº 400",
-        "addressLocality": "Ribeirão Preto",
-        "addressRegion": "SP",
-        "postalCode": "14055-440",
-        "addressCountry": "BR"
-      },
-      "openingHours": "Mo-Fr 09:00-17:00",
-      "areaServed": "Ribeirão Preto",
-      "priceRange": "R$"
+  "@context": "https://schema.org",
+  "@type": "HomeAndConstructionBusiness",
+  "name": "Vidraçaria Kibox",
+  "alternateName": "Kibox Vidraçaria",
+  "description": "Vidraçaria especializada em vidro temperado com 22 anos de experiência em Ribeirão Preto. Box de banheiro, espelhos, divisórias e forro de PVC.",
+  "url": "https://vidracariakibox.github.io",
+  "logo": "https://vidracariakibox.github.io/Imagens/logo.png",
+  "image": "https://vidracariakibox.github.io/Imagens/og-image.jpg",
+  "telephone": "+5516996197527",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Rua Campos Novos, 400",
+    "addressLocality": "Ribeirão Preto",
+    "addressRegion": "SP",
+    "postalCode": "14055-440",
+    "addressCountry": "BR"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "-21.1775",
+    "longitude": "-47.8103"
+  },
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "09:00",
+      "closes": "17:00"
     }
+  ],
+  "areaServed": {
+    "@type": "City",
+    "name": "Ribeirão Preto",
+    "containedIn": {
+      "@type": "State",
+      "name": "São Paulo"
+    }
+  },
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Serviços de Vidraçaria",
+    "itemListElement": [
+      {
+        "@type": "OfferCatalog",
+        "name": "Box de Vidro Temperado",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Box de Banheiro",
+              "description": "Instalação de box de vidro temperado para banheiros"
+            }
+          }
+        ]
+      },
+      {
+        "@type": "OfferCatalog",
+        "name": "Espelhos",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Instalação de Espelhos",
+              "description": "Espelhos sob medida para residências e comércios"
+            }
+          }
+        ]
+      },
+      {
+        "@type": "OfferCatalog",
+        "name": "Divisórias",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Divisórias de Vidro",
+              "description": "Divisórias em vidro temperado para ambientes comerciais"
+            }
+          }
+        ]
+      },
+      {
+        "@type": "OfferCatalog",
+        "name": "Forro de PVC",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Instalação de Forro PVC",
+              "description": "Forro de PVC para áreas internas e externas"
+            }
+          }
+        ]
+      }
+    ]
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.9",
+    "reviewCount": "60",
+    "bestRating": "5",
+    "worstRating": "1"
+  },
+  "foundingDate": "2003",
+  "slogan": "22 anos de experiência em vidro temperado",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+5516996197527",
+    "contactType": "Customer Service",
+    "areaServed": "BR",
+    "availableLanguage": ["pt-BR"],
+    "contactOption": "TollFree"
+  },
+  "sameAs": [
+    "https://www.instagram.com/kiboxvidros"
+  ]
+}
     </script>
 
     <!-- Google Tag Manager OTIMIZADO -->
