Ajuste de botão whatsapp

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <img src="/Imagens/icons8-whatsapp-48.webp" 
                 alt="Ícone WhatsApp"
                 width=48 
-                height="48"> <!-- Ícone otimizado -->   
+                height=48> <!-- Ícone otimizado -->   
                 <strong>Peça seu Orçamento</strong>
             </a>
         </section>
